--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>July 2017 GitHub Demonstration</title>
+		<style>
+			#norm {
+				color: red;
+				background-color: yellow;
+			}
+		</style>
     </head>
     <body>
         <h1>GitHub Demonstration</h1>
@@ -12,5 +18,10 @@
             <p>I'm the instructor at Coding Temple teaching the .net class.</p>
         </section>
         <!-- Paste below here -->
+        <section>
+            <h2 id="norm">Norm Clerman</h2>
+            <p>World's oldest bootcamp student</p>
+        </section>
+
     </body>
 </html>
